[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/illusion_serif/Regular/IllusionSerif-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/DialogueLayer.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 1 )

[node name="DialogueLayer" type="Node2D"]
z_index = 1000
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.0
margin_right = 124.0
margin_bottom = 40.0
grow_horizontal = 2
custom_fonts/normal_font = SubResource( 2 )
custom_constants/line_separation = 3
bbcode_enabled = true
bbcode_text = "[center] text"
text = " text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="TextTimer" type="Timer" parent="."]
[connection signal="timeout" from="LineTimer" to="." method="_on_LineTimer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
